уже работает хоть что-то

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "supertokens-python>=0.27.0",
     "deepgram-sdk>=3.8.0",
     "google-generativeai>=0.8.3",
+    "websockets>=15.0.1",
 ]
 
 [build-system]
