--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,18 @@
-# Application settings
-PROJECT_NAME=Audio Notes API
-VERSION=0.1.0
-DEBUG=False
+# Database
+DATABASE_URL=postgresql+asyncpg://audiouser:audiopass@postgres:5432/audio_notes_db
 
-# CORS settings (comma-separated list)
-CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+# RabbitMQ
+RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
 
-# Database settings
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/audio_notes
+# AI APIs (REQUIRED!)
+DEEPGRAM_API_KEY=your_deepgram_api_key_here
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# RabbitMQ settings
-RABBITMQ_URL=amqp://guest:guest@localhost:5672/
-RABBITMQ_QUEUE_TRANSCRIPTION=transcription_queue
-RABBITMQ_QUEUE_SUMMARIZATION=summarization_queue
-
-# File upload settings
-UPLOAD_DIR=uploads
-MAX_UPLOAD_SIZE=52428800  # 50 MB in bytes
-
-# SuperTokens settings
-SUPERTOKENS_CONNECTION_URI=http://localhost:3567
-SUPERTOKENS_API_KEY=
-SUPERTOKENS_APP_NAME=Audio Notes
+# SuperTokens
+SUPERTOKENS_CONNECTION_URI=http://supertokens:3567
 SUPERTOKENS_API_DOMAIN=http://localhost:8000
 SUPERTOKENS_WEBSITE_DOMAIN=http://localhost:3000
+SUPERTOKENS_API_KEY=your_supertokens_api_key_here
 
-# Deepgram API settings
-DEEPGRAM_API_KEY=your_deepgram_api_key_here
-
-# Google Gemini API settings
-GEMINI_API_KEY=your_gemini_api_key_here
-GEMINI_MODEL=gemini-1.5-flash
-
-# Redis settings (optional)
-REDIS_URL=redis://localhost:6379/0
-
-# Security settings
-SECRET_KEY=your-secret-key-change-in-production-use-strong-random-string
+# Logging
+LOG_LEVEL=INFO
