--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
+# ═══════════════════════════════════════════════════════════
 # Python
+# ═══════════════════════════════════════════════════════════
 __pycache__/
 *.py[cod]
-*.pyc
-*.pyo
-*.pyd
 *$py.class
 *.so
 .Python
@@ -24,66 +23,76 @@ wheels/
 *.egg
 MANIFEST
 
-# Virtual environments
+# ═══════════════════════════════════════════════════════════
+# Virtual Environments
+# ═══════════════════════════════════════════════════════════
 venv/
-ENV/
 env/
+ENV/
+env.bak/
+venv.bak/
 .venv/
-.venv
 
-# UV
-.uv/
-uv.lock
-
-# PyCharm
-.idea/
-
-# VS Code
-.vscode/
-
-# Environment variables
+# ═══════════════════════════════════════════════════════════
+# Environment Variables (КРИТИЧНО!)
+# ═══════════════════════════════════════════════════════════
 .env
 .env.local
 .env.*.local
 
+# ═══════════════════════════════════════════════════════════
 # Database
+# ═══════════════════════════════════════════════════════════
 *.db
 *.sqlite
 *.sqlite3
 
+# ═══════════════════════════════════════════════════════════
 # Logs
-*.log
+# ═══════════════════════════════════════════════════════════
 logs/
+*.log
+*.log.*
 
-# Testing & Linting
+# ═══════════════════════════════════════════════════════════
+# Uploaded Files
+# ═══════════════════════════════════════════════════════════
+uploads/
+uploads/*
+!uploads/.gitkeep
+
+# ═══════════════════════════════════════════════════════════
+# Docker
+# ═══════════════════════════════════════════════════════════
+postgres_data/
+supertokens_data/
+
+# ═══════════════════════════════════════════════════════════
+# IDE
+# ═══════════════════════════════════════════════════════════
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# ═══════════════════════════════════════════════════════════
+# Testing
+# ═══════════════════════════════════════════════════════════
 .pytest_cache/
 .coverage
 htmlcov/
 .tox/
-.hypothesis/
+
+# ═══════════════════════════════════════════════════════════
+# MyPy
+# ═══════════════════════════════════════════════════════════
 .mypy_cache/
-.ruff_cache/
 .dmypy.json
 dmypy.json
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Uploads directory
-uploads/*
-!uploads/.gitkeep
-
+# ═══════════════════════════════════════════════════════════
 # Alembic
-alembic/versions/*.py
-!alembic/versions/__init__.py
-
-# Temporary files
-*.tmp
-*.bak
-*.swp
-*~
+# ═══════════════════════════════════════════════════════════
+alembic/versions/*.pyc
