--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,16 @@ dependencies = [
     "sqlalchemy[asyncio]>=2.0.36",
     "asyncpg>=0.30.0",
     "alembic>=1.14.0",
+    "pydantic>=2.0.0",
     "pydantic-settings>=2.6.0",
     "python-multipart>=0.0.17",
     "aio-pika>=9.5.0",
     "httpx>=0.28.0",
-    "supertokens-python>=0.27.0",
+    "supertokens-python>=0.28.0",
     "deepgram-sdk>=3.8.0",
     "google-generativeai>=0.8.3",
     "websockets>=15.0.1",
+    "loguru>=0.7.0",
 ]
 
 [build-system]
