я почти написал все тесты

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Database
 DATABASE_URL=postgresql+asyncpg://audiouser:audiopass@postgres:5432/audio_notes_db
+TEST_DATABASE_URL=postgresql+asyncpg://audiouser:audiopass@localhost:5433/audio_notes_test_db
 
 # RabbitMQ
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
