--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,5 +26,14 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[project.optional-dependencies]
+test = [
+    "pytest>=7.4.3",
+    "pytest-asyncio>=0.21.1",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
+    "fakeredis>=2.20.0",
+]
+
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
