--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "google-generativeai>=0.8.3",
     "websockets>=15.0.1",
     "loguru>=0.7.0",
+    "tenacity>=8.2.3",
+    "slowapi>=0.1.9",
+    "redis>=5.0.0",
 ]
 
 [build-system]
@@ -33,6 +36,11 @@ test = [
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.12.0",
     "fakeredis>=2.20.0",
+]
+dev = [
+    "ruff>=0.1.9",
+    "mypy>=1.7.1",
+    "pre-commit>=3.6.0",
 ]
 
 [tool.hatch.build.targets.wheel]
