это финал окончательный

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "tenacity>=8.2.3",
     "slowapi>=0.1.9",
     "redis>=5.0.0",
+    "email-validator>=2.1.0",
+    "pyjwt>=2.8.0",
 ]
 
 [build-system]
